# AlgoritmAnalysis

./: .gitattributes  README.md
lab_01/: Cargo.toml  Makefile
lab_01/report/: analitic.tex  bibliography.tex  design.tex  intro.tex  preamble.tex  reaseach.tex  report.tex  technological.tex  title.tex
lab_01/src/: dist_algs.rs  lib.rs  main.rs
lab_01/tests/: damerau_levenshtein_test.rs  recursion_levenshtein_test.rs  table_levenshtein_test.rs
lab_02/: .gitignore  Makefile
lab_02/docs/: conclusion.tex  intro.tex  preamble.tex  sources.bib  title.tex
lab_02/inc/: matrix.h  mes.h  opts.h  tests.h
lab_02/mes/: mes.csv  mes_plot.html
lab_02/src/: graphic.py  main.c  matrix.c  matrix_mult.c  mes.c  opts.c
lab_02/tests/: test.c  (+5 more)
lab_03/: .gitignore  Cargo.toml  Makefile
lab_04/: .gitignore  Cargo.toml  Makefile
lab_04/docs/: conclusion.tex  intro.tex  report.tex  sources.bib  title.tex
lab_04/docs/main/: example.tex  inoutdata.tex  research.tex  testing.tex
lab_04/src/: folder.rs  main.rs  opts.rs
lab_04/src/mes/: mod.rs  plot.rs  table.rs  time.rs
lab_04/src/recipes/: cache.rs  info.rs  mod.rs
lab_04/tests/: stud-unit-test-report-prev.json
lab_05/: .gitignore  Cargo.toml  Makefile
lab_05/docs/: conclusion.tex  intro.tex  preamble.tex  sources.bib  title.tex
lab_05/docs/main/: example.tex  inoutdata.tex  research.tex  testing.tex
lab_05/src/: main.rs
lab_05/src/mes/: mod.rs  plot.rs
lab_05/src/recipes/: database.rs  log.rs  mod.rs  threads.rs
lab_05/tests/: stud-unit-test-report-prev.json
lab_06/: .gitignore  Cargo.toml  Makefile
(+65 files in other folders)
