[package]
name = "lab_04"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
plotly = "0.9.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }