[package]
name = "lab_05"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
plotly = "0.9.1"
chrono = "0.4.38"

lazy_static = "1.4.0"

scraper = "0.14"
reqwest = { version = "0.11", features = ["blocking"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusqlite = { version = "0.28", features = ["bundled"] }